--- a/iPark/Base.lproj/Main.storyboard
+++ b/iPark/Base.lproj/Main.storyboard
@@ -139,7 +139,7 @@
                                                                                 </userDefinedRuntimeAttributes>
                                                                             </imageView>
                                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E2t-mq-LUY">
-                                                                                <rect key="frame" x="120" y="25" width="130" height="50"/>
+                                                                                <rect key="frame" x="120" y="22" width="130" height="56.5"/>
                                                                                 <string key="text">Lev
 Vakulin</string>
                                                                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="21.299999237060547"/>
@@ -510,7 +510,7 @@ VEHICLES</string>
                                                                 </connections>
                                                             </button>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="App Version: v7.12.86" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p8J-l1-XaA">
-                                                                <rect key="frame" x="48" y="170" width="136" height="16.5"/>
+                                                                <rect key="frame" x="48" y="170" width="136" height="18.5"/>
                                                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
@@ -639,7 +639,7 @@ VEHICLES</string>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="EnM-oS-nK0">
                                         <rect key="frame" x="40" y="8" width="334" height="40"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QJr-Rw-T1b" customClass="FlatButton" customModule="Material">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QJr-Rw-T1b" customClass="MDCButton">
                                                 <rect key="frame" x="0.0" y="0.0" width="190.5" height="40"/>
                                                 <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="17"/>
                                                 <state key="normal" title="Create Account">
@@ -649,7 +649,7 @@ VEHICLES</string>
                                                     <segue destination="H2c-SF-Uai" kind="presentation" modalPresentationStyle="overFullScreen" modalTransitionStyle="flipHorizontal" id="zq4-St-gTL"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wdr-9v-eo0" customClass="FlatButton" customModule="Material">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wdr-9v-eo0" customClass="MDCButton">
                                                 <rect key="frame" x="206.5" y="0.0" width="127.5" height="40"/>
                                                 <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="17"/>
                                                 <state key="normal" title="Login">
@@ -4985,11 +4985,6 @@ New York, NY 10024, USA</string>
                                 <state key="normal" title="SEARCH">
                                     <color key="titleColor" red="0.027450980390000001" green="0.0" blue="0.62352941179999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="8"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="onClickSearchBtn:" destination="T2q-yP-fXh" eventType="touchUpInside" id="YRp-IY-WEo"/>
                                 </connections>
@@ -5014,6 +5009,7 @@ New York, NY 10024, USA</string>
                     <connections>
                         <outlet property="addressField" destination="Rz2-zz-kTt" id="iRp-BW-ooL"/>
                         <outlet property="addressImageView" destination="Snl-KI-3mO" id="DYX-fF-kvu"/>
+                        <outlet property="btnSearch" destination="wJ6-y8-OYE" id="oSx-50-HwG"/>
                         <outlet property="dailyView" destination="8RO-3N-fcB" id="d2U-0x-iQD"/>
                         <outlet property="endTimeField" destination="dzi-yP-ANJ" id="kIE-r7-wir"/>
                         <outlet property="endTimeImageView" destination="Vbf-AD-QBe" id="owk-dj-ZU6"/>
@@ -5175,10 +5171,10 @@ New York, NY 10024, USA</string>
                                 <rect key="frame" x="0.0" y="44" width="414" height="788"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nzK-wP-adp">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="693"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="694"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vpw-Gi-jll">
-                                                <rect key="frame" x="0.0" y="60" width="414" height="593"/>
+                                                <rect key="frame" x="0.0" y="60" width="414" height="594"/>
                                                 <subviews>
                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="F8j-WD-317">
                                                         <rect key="frame" x="119" y="0.0" width="176" height="70"/>
@@ -5188,19 +5184,19 @@ New York, NY 10024, USA</string>
                                                         </constraints>
                                                     </imageView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Registration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nT8-GW-Kth">
-                                                        <rect key="frame" x="131.5" y="94" width="150.5" height="33"/>
+                                                        <rect key="frame" x="133" y="94" width="147.5" height="34"/>
                                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="28"/>
                                                         <color key="textColor" red="0.2784313725" green="0.32156862749999998" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Register as &quot;iPark Reward&quot; member" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eru-HA-X5E">
-                                                        <rect key="frame" x="94" y="135" width="225.5" height="17"/>
+                                                        <rect key="frame" x="99.5" y="136" width="215" height="17"/>
                                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                                                         <color key="textColor" red="0.2784313725" green="0.32156862749999998" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" tag="51" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y8B-bu-2Lj" customClass="MDCTextField">
-                                                        <rect key="frame" x="45" y="184" width="324" height="90"/>
+                                                        <rect key="frame" x="45" y="185" width="324" height="90"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="90" id="1xY-1E-dLi"/>
                                                         </constraints>
@@ -5215,7 +5211,7 @@ New York, NY 10024, USA</string>
                                                         </connections>
                                                     </textField>
                                                     <textField opaque="NO" tag="52" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yVD-iD-LlB" customClass="MDCTextField">
-                                                        <rect key="frame" x="45" y="274" width="324" height="90"/>
+                                                        <rect key="frame" x="45" y="275" width="324" height="90"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="90" id="16D-eh-Ur7"/>
                                                         </constraints>
@@ -5230,7 +5226,7 @@ New York, NY 10024, USA</string>
                                                         </connections>
                                                     </textField>
                                                     <textField opaque="NO" tag="53" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UeK-8y-Wla" customClass="MDCTextField">
-                                                        <rect key="frame" x="45" y="364" width="324" height="90"/>
+                                                        <rect key="frame" x="45" y="365" width="324" height="90"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="90" id="Ui9-NS-4z0"/>
                                                         </constraints>
@@ -5245,7 +5241,7 @@ New York, NY 10024, USA</string>
                                                         </connections>
                                                     </textField>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a8U-Gy-41j" customClass="RaisedButton" customModule="Material">
-                                                        <rect key="frame" x="45" y="470" width="324" height="50"/>
+                                                        <rect key="frame" x="45" y="471" width="324" height="50"/>
                                                         <color key="backgroundColor" red="0.98823529409999999" green="0.72941176470000002" blue="0.20784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="fAs-Gw-EDM"/>
@@ -5264,13 +5260,13 @@ New York, NY 10024, USA</string>
                                                         </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By creating an account, you agree to our" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mWg-DY-1T9">
-                                                        <rect key="frame" x="86.5" y="540" width="200.5" height="13"/>
+                                                        <rect key="frame" x="90" y="541" width="194" height="13"/>
                                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="11"/>
                                                         <color key="textColor" red="0.58823529409999997" green="0.62352941179999999" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CqW-t1-bm0" customClass="FlatButton" customModule="Material">
-                                                        <rect key="frame" x="291" y="531.5" width="50" height="30"/>
+                                                        <rect key="frame" x="288" y="532.5" width="50" height="30"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="30" id="YBE-go-htK"/>
                                                             <constraint firstAttribute="width" constant="50" id="mrU-eq-gBI"/>
@@ -5337,7 +5333,7 @@ New York, NY 10024, USA</string>
                                 <rect key="frame" x="0.0" y="832" width="414" height="64"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Already have an account?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kf7-am-mBg">
-                                        <rect key="frame" x="45" y="23.5" width="162.5" height="17"/>
+                                        <rect key="frame" x="45" y="23.5" width="156.5" height="17"/>
                                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                                         <color key="textColor" red="0.58823529409999997" green="0.62352941179999999" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
